--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
+    "sweetalert2": "^11.0.17",
+    "sweetalert2-react-content": "^4.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
