--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "styled-components": "^5.3.0",
     "sweetalert2": "^11.0.17",
     "sweetalert2-react-content": "^4.0.1",
+    "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
